--- a/sadecefikirler/Views/Post/Categories.cshtml
+++ b/sadecefikirler/Views/Post/Categories.cshtml
@@ -17,7 +17,7 @@
                 <span>
                     @foreach (var category in post.Categories)
                     {
-                        <a href="blog-detail-2.html" class="be-post-tag">@category.Name , </a>
+                        <a href="blog-detail-2.html" class="be-post-tag">@category.Name  </a>
                     }
 
                     @*<a href="blog-detail-2.html" class="be-post-tag">UI/UX</a>,
