--- a/sadecefikirler/Views/Shared/Blog.cshtml
+++ b/sadecefikirler/Views/Shared/Blog.cshtml
@@ -1,37 +1,36 @@
-﻿@using Microsoft.AspNet.Identity
-@model List<sadecefikirler.Models.Post>
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
+<!-- Mirrored from demo.nrgthemes.com/projects/nrgnetwork/blog-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Nov 2016 13:45:43 GMT -->
 <head>
-    <title>Sadece Fikirler</title>
+    <title>NGRNetwork</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="~/Content/img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="~/Content/style/bootstrap.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Content/style/icon.css">
-    <link rel="stylesheet" href="~/Content/style/loader.css">
-    <link rel="stylesheet" href="~/Content/style/idangerous.swiper.css">
-    <link rel="stylesheet" href="~/Content/style/jquery-ui.css">
-    <link rel="stylesheet" href="~/Content/style/stylesheet.css">
-
-    <link rel="stylesheet" href="style/bootstrap.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style/icon.css">
-    <link rel="stylesheet" href="style/loader.css">
-    <link rel="stylesheet" href="style/idangerous.swiper.css">
-    <link rel="stylesheet" href="style/jquery-ui.css">
-    <link rel="stylesheet" href="~/Content/style/stylesheet.css">
+    <link rel="stylesheet" href="maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Content/style/style/icon.css">
+    <link rel="stylesheet" href="~/Content/style/style/loader.css">
+    <link rel="stylesheet" href="~/Content/style/style/idangerous.swiper.css">
+    <link rel="stylesheet" href="~/Content/style/style/stylesheet.css">
+    <link href="~/Content/style/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/style/icon.css" rel="stylesheet" />
+    <link href="~/Content/style/idangerous.swiper.css" rel="stylesheet" />
+    <link href="~/Content/style/jquery-ui.css" rel="stylesheet" />
+    <link href="~/Content/style/loader.css" rel="stylesheet" />
+    <link href="~/Content/style/magnific.css" rel="stylesheet" />
+    <link href="~/Content/style/stylesheet.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
 
     <!--[if lt IE 10]>
-        <link rel="stylesheet" type="text/css" href="~/Content/style/ie-9.css" />
+        <link rel="stylesheet" type="text/css" href="style/ie-9.css" />
     <![endif]-->
     <!--[if lt IE 9]>
-        <script src="~/Content/https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="~/Content/https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 </head>
@@ -67,14 +66,14 @@
                     <ul class="header-menu" id="one">
                         <li><a href="activity.html">Projeler</a></li>
                         <li>
-                            @Html.ActionLink("Nasıl Yapılır?", "Blog", "Post")
+                            <a href="~/Views/Shared/Page1.cshtml">Nasıl Yapılır?</a>
                             <ul>
                                 <li><a href="search.html">Mvc</a></li>
                                 <li><a href="people.html">Arduino</a></li>
                                 <li><a href="gallery.html">IOT</a></li>
                             </ul>
                         </li>
-                        <li>@Html.ActionLink("Haberler", "Blog", "Post")</li>
+                        <li><a href="author-login.html">Haberler</a></li>
                         <li><a href="site-map.html">Takım Oluştur</a></li>
                         <li><a href="organization.html">Bize Ulaşın</a></li>
                         <li id="ad-work-li"><a id="add-work-btn" class="btn color-1" href="work.html">Proje Ekle</a></li>
@@ -94,138 +93,7 @@
 
     <!-- MAIN CONTENT -->
     <div id="content-block">
-        <div class="head-bg">
-            <div class="head-bg-img"></div>
-            <div class="head-bg-content">
-                <h1>SADECE FİKİRLER</h1>
-                <p>Donec in rhoncus tortor. Sed tristique auctor ligula vel viverra</p>
-                <a class="btn color-1 size-1 hover-1"><i class="fa fa-facebook"></i>sign up via facebook</a>
-                <a class="be-register btn color-3 size-1 hover-6"><i class="fa fa-lock"></i>Üye Ol</a>
-            </div>
-        </div>
-        <div class="container-fluid cd-main-content custom-container">
-            <div class="row">
-                <div class="col-md-2 left-feild">
-                    <form action="http://demo.nrgthemes.com/projects/nrgnetwork/" class="input-search">
-                        <input type="text" required="" placeholder="Enter keyword">
-                        <i class="fa fa-search"></i>
-                        <input type="submit" value="">
-                    </form>
-                </div>
-                <div class="col-md-10 ">
-                    <div class="for-be-dropdowns">
-                        <div class="be-drop-down">
-                            <i class="icon-projects"></i>
-                            <span class="be-dropdown-content"> Projects	</span>
-                            <ul class="drop-down-list">
-                                <li class="filter" data-filter=".category-1"><a data-type="category-1">Projects</a></li>
-                                <li class="filter" data-filter=".category-2"><a data-type="category-2">Work in Progress</a></li>
-                                <li class="filter" data-filter=".category-3"><a data-type="category-3">People</a></li>
-                            </ul>
-                        </div>
-                        <div class="be-drop-down">
-                            <i class="icon-creative"></i>
-                            <span class="be-dropdown-content">
-                                All Creative Filds
-                            </span>
-                            <ul class="drop-down-list">
-                                <li class="filter" data-filter=".category-4"><a>Item - 1</a></li>
-                                <li class="filter" data-filter=".category-5"><a>Item - 2</a></li>
-                                <li class="filter" data-filter=".category-1"><a>Item - 3</a></li>
-                            </ul>
-                        </div>
-                        <div class="be-drop-down">
-                            <i class="icon-features"></i>
-                            <span class="be-dropdown-content">
-                                Features
-                            </span>
-                            <ul class="drop-down-list">
-                                <li class="filter" data-filter=".category-2"><a>Featured</a></li>
-                                <li class="filter" data-filter=".category-3"><a>Most Appreciated</a></li>
-                                <li class="filter" data-filter=".category-4"><a>Most Viewed</a></li>
-                                <li class="filter" data-filter=".category-5"><a>Most Discussed</a></li>
-                                <li class="filter" data-filter=".category-1"><a>Most Recent</a></li>
-                            </ul>
-                        </div>
-                        <div class="be-drop-down">
-                            <i class="icon-worldwide"></i>
-                            <span class="be-dropdown-content">
-                                Worldwide
-                            </span>
-                            <ul class="drop-down-list">
-                                <li class="filter" data-filter=".category-2"><a>WorldWide</a></li>
-                                <li class="filter" data-filter=".category-3"><a>United States</a></li>
-                                <li class="filter" data-filter=".category-4"><a>Germany</a></li>
-                                <li class="filter" data-filter=".category-5"><a>United Kingdom</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid custom-container">
-            <div class="row">
-
-                <div class="col-md-2 left-feild">
-                    @{ Html.RenderAction("CategoryMenu", "PartialManager"); }
-                    <div class="be-vidget">
-                    @{ Html.RenderAction("TagsMenu", "PartialManager"); }
-                    </div>
-                    <div class="be-vidget">
-                        <h3 class="letf-menu-article">
-                            Filter By
-                        </h3>
-                        <div class="filter-block">
-                            <ul>
-                                <li>
-                                    <a><i class="fa fa-graduation-cap"></i>Schools</a>
-                                    <div class="be-popup">
-                                        <h3 class="letf-menu-article">
-                                            Enter School
-                                        </h3>
-                                        <form action="http://demo.nrgthemes.com/projects/nrgnetwork/" class="input-search">
-                                            <input class="filters-input" type="text" required placeholder="Start typing to see list">
-                                        </form>
-                                        <i class="fa fa-times"></i>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a><i class="fa fa-wrench"></i>Tools Used</a>
-                                    <div class="be-popup">
-                                        <h3 class="letf-menu-article">
-                                            Tools
-                                        </h3>
-                                        <form action="http://demo.nrgthemes.com/projects/nrgnetwork/" class="input-search">
-                                            <input class="filters-input" type="text" required placeholder="Start typing to see list">
-                                        </form>
-                                        <i class="fa fa-times"></i>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a><i class="fa fa-camera-retro"></i>Visit Gallery</a>
-                                    <div class="be-popup">
-                                        <h3 class="letf-menu-article">
-                                            Galerry
-                                        </h3>
-                                        <form action="http://demo.nrgthemes.com/projects/nrgnetwork/" class="input-search">
-                                            <input class="filters-input" type="text" required placeholder="Start typing to see list">
-                                        </form>
-                                        <i class="fa fa-times"></i>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-10">
-                    <div id="container-mix" class="row _post-container_">
-                        @RenderBody()       
-                    </div>
-                </div>
-
-            </div>
-        </div>
+        @RenderBody()
     </div>
     <!-- THE FOOTER -->
     <footer>
@@ -426,7 +294,7 @@
                         <div class="footer-block">
                             <h1 class="footer-title">Recent Works</h1>
                             <a href="blog-detail-2.html"><img src="~/Content/img/g1.jpg" alt=""></a>
-                            <a href="blog-detail-2.html"><img src="~/Content/img/g2.jpg" alt=""></a>
+                            <a href="blog-detail-2.html"><img src="~/Content/mg/g2.jpg" alt=""></a>
                             <a href="blog-detail-2.html"><img src="~/Content/img/g3.jpg" alt=""></a>
                             <a href="blog-detail-2.html"><img src="~/Content/img/g4.jpg" alt=""></a>
                             <a href="blog-detail-2.html"><img src="~/Content/img/g5.jpg" alt=""></a>
@@ -455,7 +323,7 @@
                                 </div>
                                 <div class="message-soc">
                                     <div class="date">16h ago</div>
-                                    <a href="blog-detail-2.html" class="account">faq</a> vestibulum accumsan est <a href="blog-detail-2.html" class="heshtag">blog-detail-2.htmlmalesuada</a> sem auctor, eu aliquet nisi ornare leo sit amet varius egestas.
+                                    <a href="blog-detail-2.html" class="account"></a> vestibulum accumsan est <a href="blog-detail-2.html" class="heshtag">blog-detail-2.htmlmalesuada</a> sem auctor, eu aliquet nisi ornare leo sit amet varius egestas.
                                 </div>
                             </div>
                         </div>
@@ -502,7 +370,7 @@
                             <div class="col-xs-6">
                                 <div class="be-checkbox">
                                     <label class="check-box">
-                                        <input class="checkbox-input" type="checkbox" value=""> <span class="check-box-sign"></span>
+                                        <input class="checkbox-input" type="checkbox" /> <span class="check-box-sign"></span>
                                     </label>
                                     <span class="large-popup-text">
                                         Stay signed in
@@ -632,7 +500,7 @@
                             <div class="col-md-6">
                                 <div class="be-checkbox">
                                     <label class="check-box">
-                                        <input class="checkbox-input" type="checkbox" required="" value=""> <span class="check-box-sign"></span>
+                                        <input class="checkbox-input" type="checkbox" required="" /> <span class="check-box-sign"></span>
                                     </label>
                                     <span class="large-popup-text">
                                         I have read and agree to the <a class="be-popup-terms" href="blog-detail-2.html">Terms of Use</a> and <a class="be-popup-terms" href="blog-detail-2.html">Privacy Policy</a>.
@@ -640,7 +508,7 @@
                                 </div>
                                 <div class="be-checkbox">
                                     <label class="check-box">
-                                        <input class="checkbox-input" type="checkbox" value=""> <span class="check-box-sign"></span>
+                                        <input class="checkbox-input" type="checkbox" /> <span class="check-box-sign"></span>
                                     </label>
                                     <span class="large-popup-text">
                                         Send me notifications
@@ -669,20 +537,51 @@
                 <div class="entry s-color color11" data-colour="style/style-oranges.html"></div>
                 <div class="entry s-color color12" data-colour="style/style-greens.html"></div>
                 <div class="entry s-color color13" data-colour="style/style-reds.html"></div>
+
             </div>
         </div>
         <div class="open"><img src="~/Content/img/icon-134.png" alt=""></div>
     </div>
+
+
     <!-- SCRIPTS	 -->
     <script src="~/Content/script/jquery-2.1.4.min.js"></script>
-    <script src="~/Content/script/jquery-ui.min.js"></script>
     <script src="~/Content/script/bootstrap.min.js"></script>
     <script src="~/Content/script/idangerous.swiper.min.js"></script>
-    <script src="~/Content/script/jquery.mixitup.js"></script>
+    <script src="~/Content/script/isotope.pkgd.min.js"></script>
     <script src="~/Content/script/jquery.viewportchecker.min.js"></script>
-    <script src="~/Content/script/filters.js"></script>
     <script src="~/Content/script/global.js"></script>
+    <script src="~/Scripts/_references.js"></script>
+    <script src="~/Scripts/bootstrap.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.validate-vsdoc.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="~/Scripts/respond.js"></script>
+    <script src="~/Scripts/respond.min.js"></script>
+    <a href="~/Scripts/jquery-1.10.2.min.map">@*~/Scripts/jquery-1.10.2.min.map*@</a>
+    <script src="~/Content/script/_references.js"></script>
+    <script src="~/Content/script/bootstrap.js"></script>
+    <script src="~/Content/script/bootstrap.min.js"></script>
+    <script src="~/Content/script/jquery-1.10.2.intellisense.js"></script>
+    <script src="~/Content/script/jquery-1.10.2.js"></script>
+    <script src="~/Content/script/jquery-1.10.2.min.js"></script>
+    <script src="~/Content/script/jquery.validate-vsdoc.js"></script>
+    <script src="~/Content/script/jquery.validate.js"></script>
+    <script src="~/Content/script/jquery.validate.min.js"></script>
+    <script src="~/Content/script/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Content/script/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Content/script/modernizr-2.6.2.js"></script>
+    <script src="~/Content/script/respond.js"></script>
+    <script src="~/Content/script/respond.min.js"></script>
+    <a href="~/Content/script/jquery-1.10.2.min.map">@*~/Content/script/jquery-1.10.2.min.map*@</a>
+
 </body>
 
-<!-- Mirrored from demo.nrgthemes.com/projects/nrgnetwork/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Nov 2016 13:41:34 GMT -->
 </html>
