Revert "talha deneme"
This reverts commit 59f062e0dfa2a7a107667e96a59c216b05fbbbf0.

--- a/sadecefikirler/Content/style/stylesheet.css
+++ b/sadecefikirler/Content/style/stylesheet.css
@@ -1,4 +1,4 @@
-﻿@charset "UTF-8";
+@charset "UTF-8";
 /*
 
 /*  		00 - RESET   				*/
@@ -1714,7 +1714,7 @@ display: inline-block; float: none; margin: 0 10px;}
 
 .blog-filter .btn:last-child { margin-right: 0px; }
 
-#content-block .blog-filter .btn:last-child { margin-bottom: 0px; }
+#content-block .blog-filter .btn:last-child { margin-bottom: 10px; }
 
 .blog-post { border: 1px solid #edeff2; border-radius: 5px; overflow: hidden; margin-bottom: 50px; }
 
