--- a/sadecefikirler/Views/Post/Blog.cshtml
+++ b/sadecefikirler/Views/Post/Blog.cshtml
@@ -46,7 +46,7 @@
                             </div>
                             <a class="post-label" href="blog-detail.html">@post.Title</a>
                             <div class="post-text">@post.Content</div>
-                            <a class="btn color-1 size-2 hover-1" href="blog-detail.html">Read more</a>
+                            <a class="btn color-1 size-2 hover-1" href="blog-detail.html">Devamını Oku...</a>
                             <div class="info-block">
                                 <span><i class="fa fa-thumbs-o-up"></i> 360</span>
                                 <span><i class="fa fa-eye"></i> 789</span>
