--- a/sadecefikirler/Views/Shared/Blog.cshtml
+++ b/sadecefikirler/Views/Shared/Blog.cshtml
@@ -73,7 +73,7 @@
                                 <li><a href="gallery.html">IOT</a></li>
                             </ul>
                         </li>
-                        <li>@Html.ActionLink("Haberler", "Blog", "Post")</li>
+                        <li>@Html.ActionLink("Haberler", "NewsBlog", "Post")</li>
                         <li><a href="site-map.html">Takım Oluştur</a></li>
                         <li><a href="organization.html">Bize Ulaşın</a></li>
                         <li id="ad-work-li"><a id="add-work-btn" class="btn color-1" href="work.html">Proje Ekle</a></li>
